tests/ui/errors/suggest-rust-src.stderr
error[E0507]: cannot move out of `self.thread` which is behind a mutable reference
  --> $DIR/suggest-rust-src.rs:LL:COL
   |
LL |         self.thread.join().unwrap();
   |         ^^^^^^^^^^^ ------ `self.thread` moved due to this method call
   |         |
   |         move occurs because `self.thread` has type `JoinHandle<()>`, which does not implement the `Copy` trait
   |
note: `JoinHandle::<T>::join` takes ownership of the receiver `self`, which moves `self.thread`
  --> $SRC_DIR/std/src/thread/join_handle.rs:LL:COL
   = help: the source code for the standard library is not available; run `rustup component add rust-src` to make it available

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0507`.
